--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,9 @@
 [build-system]
-requires = ["flit_core >=3.2,<4"]
+requires = [
+    'librosa==0.9.0',
+    'matplotlib==3.5.1',
+    'audio-metadata==0.11.1'
+]
 build-backend = "flit_core.buildapi"
 
 [project]
