--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,9 @@
 requires = [
     'librosa==0.9.0',
     'matplotlib==3.5.1',
-    'audio-metadata==0.11.1'
+    'audio-metadata==0.11.1',
+    'flit==3.6.0',
+    'flit_core==3.6.0',
 ]
 build-backend = "flit_core.buildapi"
 
