--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,11 @@ readme = "README.md"
 license = {file = "LICENSE"}
 classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
 dynamic = ["version", "description"]
+dependencies = [
+    'librosa==0.9.0',
+    'matplotlib==3.5.1',
+    'audio-metadata==0.11.1',
+]
 
 [project.urls]
 Home = "https://github.com/emingenc/soundviewer"
