--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,7 @@
 [build-system]
 requires = [
-    'librosa==0.9.0',
-    'matplotlib==3.5.1',
-    'audio-metadata==0.11.1',
-    'flit==3.6.0',
-    'flit_core==3.6.0',
+    'flit>=3.6.0',
+    'flit_core>=3.6.0',
 ]
 build-backend = "flit_core.buildapi"
 
@@ -16,9 +13,9 @@ license = {file = "LICENSE"}
 classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
 dynamic = ["version", "description"]
 dependencies = [
-    'librosa==0.9.0',
-    'matplotlib==3.5.1',
-    'audio-metadata==0.11.1',
+    'librosa>=0.9.0',
+    'matplotlib>=3.5.1',
+    'audio-metadata>=0.11.1',
 ]
 
 [project.urls]
