--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     'librosa>=0.9.0',
     'matplotlib>=3.5.1',
     'audio-metadata>=0.11.1',
+    'opencv-python>=4.5.5.62',
 ]
 
 [project.urls]
